force-app/main/default/objects/Outreach__c/Outreach__c.object-meta.xml
<CustomObject>
    <description>A management tool for collecting and tracking information about Enterprise Toronto outreach activities.</description>
    <label>Outreach</label>
    <nameField>
        <displayFormat>OR-{YYYY}-{00000000}</displayFormat>
        <label>Outreach Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Outreach Activities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>