force-app/main/default/objects/Outreach__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>BPQ-Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Outreach Activities</relationshipLabel>
    <relationshipName>Outreach_Activities</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>