force-app/main/default/objects/Outreach__c/fields/Attendance__c.field-meta.xml
<CustomField>
    <fullName>Attendance__c</fullName>
    <description>Number of attendees/participants directly participating in ET presentation or visiting ET booth</description>
    <label>FUI-Attendance</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>