force-app/main/default/objects/Outreach__c/fields/Audience__c.field-meta.xml
<CustomField>
    <fullName>Audience__c</fullName>
    <description>(select all that apply):</description>
    <label>BPQ-Audience</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Youth &amp; Students (16 to 29)</fullName>
            </value>
            <value>
                <fullName>New Canadians</fullName>
            </value>
            <value>
                <fullName>Unemployed / In-Search of Work</fullName>
            </value>
            <value>
                <fullName>General</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>