force-app/main/default/objects/Outreach__c/fields/BPQ_Address__c.field-meta.xml
<CustomField>
    <fullName>BPQ_Address__c</fullName>
    <label>BPQ - Address</label>
    <length>100</length>
    <type>Text</type>
</CustomField>