force-app/main/default/objects/Outreach__c/fields/BPQ_Address_Event__c.field-meta.xml
<CustomField>
    <fullName>BPQ_Address_Event__c</fullName>
    <label>BPQ - Address Event</label>
    <length>100</length>
    <type>Text</type>
</CustomField>