force-app/main/default/objects/Outreach__c/fields/BPQ_EI_Email__c.field-meta.xml
<CustomField>
    <fullName>BPQ_EI_Email__c</fullName>
    <label>BPQ - EI - Email</label>
    <type>Email</type>
</CustomField>