force-app/main/default/objects/Outreach__c/fields/BPQ_EI_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>BPQ_EI_Phone_Number__c</fullName>
    <label>BPQ - EI - Phone Number</label>
    <type>Phone</type>
</CustomField>