force-app/main/default/objects/Outreach__c/fields/BPQ_EI_Title__c.field-meta.xml
<CustomField>
    <fullName>BPQ_EI_Title__c</fullName>
    <label>BPQ - EI - Title</label>
    <length>50</length>
    <type>Text</type>
</CustomField>