force-app/main/default/objects/Outreach__c/fields/BPQ_Event_Staff_Available_on_Day__c.field-meta.xml
<CustomField>
    <fullName>BPQ_Event_Staff_Available_on_Day__c</fullName>
    <label>BPQ - Event Staff Available on Day</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>