force-app/main/default/objects/Outreach__c/fields/BPQ_First_Name__c.field-meta.xml
<CustomField>
    <fullName>BPQ_First_Name__c</fullName>
    <label>BPQ - First Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>