force-app/main/default/objects/Outreach__c/fields/BPQ_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>BPQ_Last_Name__c</fullName>
    <label>BPQ - Last Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>