force-app/main/default/objects/Outreach__c/fields/BPQ_Postal_Code_Event__c.field-meta.xml
<CustomField>
    <fullName>BPQ_Postal_Code_Event__c</fullName>
    <label>BPQ - Postal Code Event</label>
    <length>10</length>
    <type>Text</type>
</CustomField>