force-app/main/default/objects/Outreach__c/fields/BPQ_Province_Event__c.field-meta.xml
<CustomField>
    <fullName>BPQ_Province_Event__c</fullName>
    <label>BPQ - Province Event</label>
    <length>50</length>
    <type>Text</type>
</CustomField>