force-app/main/default/objects/Outreach__c/fields/BPQ_Province_Org__c.field-meta.xml
<CustomField>
    <fullName>BPQ_Province_Org__c</fullName>
    <label>BPQ - Province Org</label>
    <length>50</length>
    <type>Text</type>
</CustomField>