force-app/main/default/objects/Outreach__c/fields/BPQ_Time_of_Event__c.field-meta.xml
<CustomField>
    <fullName>BPQ_Time_of_Event__c</fullName>
    <label>BPQ - Time of Event</label>
    <length>255</length>
    <type>Text</type>
</CustomField>