force-app/main/default/objects/Outreach__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BPQ-Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Outreach Activities</relationshipLabel>
    <relationshipName>Outreach_Activities</relationshipName>
    <type>Lookup</type>
</CustomField>