force-app/main/default/objects/Outreach__c/fields/Date_of_Event__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Event__c</fullName>
    <label>BPQ-Date of Event</label>
    <type>Date</type>
</CustomField>