force-app/main/default/objects/Outreach__c/fields/Description_of_the_Event__c.field-meta.xml
<CustomField>
    <fullName>Description_of_the_Event__c</fullName>
    <label>BPQ-Description of the Event</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>