force-app/main/default/objects/Outreach__c/fields/Do_event_in_the_future_if_requested__c.field-meta.xml
<CustomField>
    <fullName>Do_event_in_the_future_if_requested__c</fullName>
    <label>FUI-Do event in the future if requested:</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>