force-app/main/default/objects/Outreach__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <label>BPQ-Email</label>
    <type>Email</type>
</CustomField>