force-app/main/default/objects/Outreach__c/fields/Equipment_Provided__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Provided__c</fullName>
    <description>Will your organization be providing all required equipment for Enterprise Toronto staff use on the day of the event:</description>
    <label>BPQ-Equipment Provided?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>