force-app/main/default/objects/Outreach__c/fields/ET_to_Attend_Event__c.field-meta.xml
<CustomField>
    <fullName>ET_to_Attend_Event__c</fullName>
    <label>RPI-ET to Attend Event:</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>