force-app/main/default/objects/Outreach__c/fields/Event_location__c.field-meta.xml
<CustomField>
    <fullName>Event_location__c</fullName>
    <label>BPQ-Event location</label>
    <length>100</length>
    <type>Text</type>
</CustomField>