force-app/main/default/objects/Outreach__c/fields/Event_Reservations__c.field-meta.xml
<CustomField>
    <fullName>Event_Reservations__c</fullName>
    <description>Please advise how reservations will be taken for the event</description>
    <label>BPQ-Event Reservations</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>