force-app/main/default/objects/Outreach__c/fields/Expected_Attendance__c.field-meta.xml
<CustomField>
    <fullName>Expected_Attendance__c</fullName>
    <label>BPQ-Expected Attendance</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>