force-app/main/default/objects/Outreach__c/fields/FUE__c.field-meta.xml
<CustomField>
    <fullName>FUE__c</fullName>
    <label>FUE - Was ET Staff Helpful</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>