force-app/main/default/objects/Outreach__c/fields/FUE_ET_involvement_in_future_events__c.field-meta.xml
<CustomField>
    <fullName>FUE_ET_involvement_in_future_events__c</fullName>
    <label>FUE-ET involvement in future events?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>