force-app/main/default/objects/Outreach__c/fields/Good_use_of_resources__c.field-meta.xml
<CustomField>
    <fullName>Good_use_of_resources__c</fullName>
    <description>Was the event a good use of ET resources? Please comment.</description>
    <label>FUI-Good use of resources?</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>