force-app/main/default/objects/Outreach__c/fields/Have_you_worked_with_ET_before__c.field-meta.xml
<CustomField>
    <fullName>Have_you_worked_with_ET_before__c</fullName>
    <label>BPQ-Have you worked with ET before?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>