force-app/main/default/objects/Outreach__c/fields/How_satisfied_were_you_with_ET_staff__c.field-meta.xml
<CustomField>
    <fullName>How_satisfied_were_you_with_ET_staff__c</fullName>
    <label>FUE-How satisfied were you with ET staff</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Very Satisfied</fullName>
            </value>
            <value>
                <fullName>Satisfied</fullName>
            </value>
            <value>
                <fullName>Not Satisfied</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>