force-app/main/default/objects/Outreach__c/fields/If_No_the_reason_is__c.field-meta.xml
<CustomField>
    <fullName>If_No_the_reason_is__c</fullName>
    <label>RPI-If No, the reason is:</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Short Notice</fullName>
            </value>
            <value>
                <fullName>Not a target client group</fullName>
            </value>
            <value>
                <fullName>Expected attendance too small</fullName>
            </value>
            <value>
                <fullName>Attended in the past with poor results</fullName>
            </value>
            <value>
                <fullName>Staff unavailable</fullName>
            </value>
            <value>
                <fullName>Event Cancelled by Organizer</fullName>
            </value>
            <value>
                <fullName>For Profit Business</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>