force-app/main/default/objects/Outreach__c/fields/If_yes_amount__c.field-meta.xml
<CustomField>
    <fullName>If_yes_amount__c</fullName>
    <label>RPI-If yes, amount:</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>