force-app/main/default/objects/Outreach__c/fields/If_yes_how_much__c.field-meta.xml
<CustomField>
    <fullName>If_yes_how_much__c</fullName>
    <label>BPQ-If yes, how much?</label>
    <length>100</length>
    <type>Text</type>
</CustomField>