force-app/main/default/objects/Outreach__c/fields/If_yes_what_equipment_will_be_provided__c.field-meta.xml
<CustomField>
    <fullName>If_yes_what_equipment_will_be_provided__c</fullName>
    <label>BPQ-If yes, what equipment is provided:</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Laptop</fullName>
            </value>
            <value>
                <fullName>Projector</fullName>
            </value>
            <value>
                <fullName>Screen</fullName>
            </value>
            <value>
                <fullName>Table</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>