force-app/main/default/objects/Outreach__c/fields/If_yes_who_did_you_work_with__c.field-meta.xml
<CustomField>
    <fullName>If_yes_who_did_you_work_with__c</fullName>
    <label>BPQ-If yes, who did you work with:</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Angie Bellanza</fullName>
            </value>
            <value>
                <fullName>Margie Galarneau</fullName>
            </value>
            <value>
                <fullName>Ronit Goldenberg</fullName>
            </value>
            <value>
                <fullName>Vikas Jain</fullName>
            </value>
            <value>
                <fullName>Karen Keskull</fullName>
            </value>
            <value>
                <fullName>Sandi Koitsis-Zigomanis</fullName>
            </value>
            <value>
                <fullName>Jason Li</fullName>
            </value>
            <value>
                <fullName>Chris Rickett</fullName>
            </value>
            <value>
                <fullName>Gracie Worrall</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>