force-app/main/default/objects/Outreach__c/fields/Is_there_a_cost_for_the_City_of_Toronto__c.field-meta.xml
<CustomField>
    <fullName>Is_there_a_cost_for_the_City_of_Toronto__c</fullName>
    <label>BPQ-Fee for the City of Toronto?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>