force-app/main/default/objects/Outreach__c/fields/Is_there_anything__c.field-meta.xml
<CustomField>
    <fullName>Is_there_anything__c</fullName>
    <label>FUE-Anything ET can do in the future</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>