force-app/main/default/objects/Outreach__c/fields/Ministry_Reporting__c.field-meta.xml
<CustomField>
    <fullName>Ministry_Reporting__c</fullName>
    <label>BPQ-Ministry Reporting</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Starting A Small Business</fullName>
            </value>
            <value>
                <fullName>Business Planning</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>