force-app/main/default/objects/Outreach__c/fields/Name_of_Event__c.field-meta.xml
<CustomField>
    <fullName>Name_of_Event__c</fullName>
    <label>BPQ-Name of Event</label>
    <length>100</length>
    <type>Text</type>
</CustomField>