force-app/main/default/objects/Outreach__c/fields/Organization_Type_O__c.field-meta.xml
<CustomField>
    <fullName>Organization_Type_O__c</fullName>
    <label>BPQ-Organization Type-Other</label>
    <length>100</length>
    <type>Text</type>
</CustomField>