force-app/main/default/objects/Outreach__c/fields/Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Postal_Code__c</fullName>
    <label>BPQ-Postal Code</label>
    <length>7</length>
    <type>Text</type>
</CustomField>