force-app/main/default/objects/Outreach__c/fields/Relevant_to_targeted_client_base__c.field-meta.xml
<CustomField>
    <fullName>Relevant_to_targeted_client_base__c</fullName>
    <description>Was there a good fit between the event and ET&#39;s targeted client base</description>
    <label>FUI-Relevant to targeted client base:</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>