force-app/main/default/objects/Outreach__c/fields/RPI_Outreach_Category__c.field-meta.xml
<CustomField>
    <fullName>RPI_Outreach_Category__c</fullName>
    <label>RPI-Outreach Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Outreach to Business</fullName>
            </value>
            <value>
                <fullName>Outreach Events</fullName>
            </value>
            <value>
                <fullName>Partnership Outreach</fullName>
            </value>
            <value>
                <fullName>General Networking</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>