force-app/main/default/objects/Outreach__c/fields/RPI_Reviewed_By_User1__c.field-meta.xml
<CustomField>
    <fullName>RPI_Reviewed_By_User1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RPI-Reviewed By:</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Outreach_Activities</relationshipName>
    <type>Lookup</type>
</CustomField>