force-app/main/default/objects/Outreach__c/fields/RPI_Staff_member_attending_user1__c.field-meta.xml
<CustomField>
    <fullName>RPI_Staff_member_attending_user1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RPI-Staff member attending:</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.UserRole.Name</field>
            <operation>equals</operation>
            <value>ES-ET</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Outreach_Activities1</relationshipName>
    <type>Lookup</type>
</CustomField>