force-app/main/default/objects/Outreach__c/fields/Service_Requested__c.field-meta.xml
<CustomField>
    <fullName>Service_Requested__c</fullName>
    <description>Type of service requested (select all that apply):</description>
    <label>BPQ-Service Requested</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Presentation on Services the City offers</fullName>
            </value>
            <value>
                <fullName>Presentation on How to Start a Business</fullName>
            </value>
            <value>
                <fullName>One-on-One Business Consultations</fullName>
            </value>
            <value>
                <fullName>Enterprise Toronto Booth</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>