force-app/main/default/objects/Outreach__c/fields/Staff_Contact_Information__c.field-meta.xml
<CustomField>
    <fullName>Staff_Contact_Information__c</fullName>
    <description>Please provide a name and contact number of staff from your organization that will be present on the day of the event, in the case that Enterprise Toronto staff may require assistance.</description>
    <label>BPQ-Event Staff Contact Information</label>
    <length>250</length>
    <type>Text</type>
</CustomField>