force-app/main/default/objects/Outreach__c/fields/Staff_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Staff_Feedback__c</fullName>
    <description>Additional comments or considerations</description>
    <label>FUI-Staff Feedback</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>