force-app/main/default/objects/Outreach__c/fields/Street__c.field-meta.xml
<CustomField>
    <fullName>Street__c</fullName>
    <label>BPQ-Street</label>
    <length>100</length>
    <type>Text</type>
</CustomField>