force-app/main/default/objects/Outreach__c/fields/Sufficient_support_provided_to__c.field-meta.xml
<CustomField>
    <fullName>Sufficient_support_provided_to__c</fullName>
    <label>FUI-Sufficient support provided:</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>