force-app/main/default/objects/Outreach__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <label>BPQ-Title</label>
    <length>100</length>
    <type>Text</type>
</CustomField>