force-app/main/default/objects/Outreach__c/validationRules/RPI_Reviewer_is_required_if_Reviewed.validationRule-meta.xml
<ValidationRule>
    <fullName>RPI_Reviewer_is_required_if_Reviewed</fullName>
    <active>true</active>
    <description>RPI-Reviewer is required if Reviewed.</description>
    <errorConditionFormula>AND( ISPICKVAL(Reviewed__c, &#39;Yes&#39;),   ISBLANK(RPI_Reviewed_By_User1__c))</errorConditionFormula>
    <errorDisplayField>RPI_Staff_member_attending_user1__c</errorDisplayField>
    <errorMessage>RPI-Reviewed By is required if it is reviewed.</errorMessage>
</ValidationRule>