force-app/main/default/objects/Outreach__c/listViews/Outreach_Requests_To_Be_Reviewed.listView-meta.xml
<ListView>
    <fullName>Outreach_Requests_To_Be_Reviewed</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Name_of_Event__c</columns>
    <columns>Contact__c</columns>
    <columns>Date_of_Event__c</columns>
    <columns>ET_to_Attend_Event__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ET_to_Attend_Event__c</field>
        <operation>notContain</operation>
        <value>Yes</value>
    </filters>
    <filters>
        <field>ET_to_Attend_Event__c</field>
        <operation>notContain</operation>
        <value>No</value>
    </filters>
    <label>Outreach Requests - To Be Reviewed</label>
    <sharedTo>
        <roleAndSubordinates>EDC_Admin</roleAndSubordinates>
        <roleAndSubordinates>ES_Admin</roleAndSubordinates>
        <roleAndSubordinates>ES_ET</roleAndSubordinates>
    </sharedTo>
</ListView>