force-app/main/default/objects/Outreach__c/listViews/Outreach_Requests_UnApproved2015.listView-meta.xml
<ListView>
    <fullName>Outreach_Requests_UnApproved2015</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Name_of_Event__c</columns>
    <columns>Contact__c</columns>
    <columns>Date_of_Event__c</columns>
    <columns>RPI_Staff_member_attending_user1__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ET_to_Attend_Event__c</field>
        <operation>contains</operation>
        <value>No</value>
    </filters>
    <filters>
        <field>Date_of_Event__c</field>
        <operation>greaterThan</operation>
        <value>1/1/2015</value>
    </filters>
    <label>Outreach Requests - UnApproved 2015</label>
    <sharedTo>
        <roleAndSubordinates>EDC_Admin</roleAndSubordinates>
        <roleAndSubordinates>ES_Admin</roleAndSubordinates>
        <roleAndSubordinates>ES_ET</roleAndSubordinates>
    </sharedTo>
</ListView>